--- a/lib/sass/_NavBar.scss
+++ b/lib/sass/_NavBar.scss
@@ -21,5 +21,8 @@
                 box-shadow: 5px 5px 5px #999
             }
         }
+        .connection {
+            font-weight: bolder;
+        }
     }
 }
