--- a/lib/sass/_PublicationDateLimiter.scss
+++ b/lib/sass/_PublicationDateLimiter.scss
@@ -5,7 +5,7 @@
         width: 80px;
     }
     .boundaries {
-        display: flex;
+        @include display-flex;
         align-items: center;
         justify-content: center;
         align-content: stretch;
