--- a/lib/sass/_SearchInput.scss
+++ b/lib/sass/_SearchInput.scss
@@ -1,16 +1,23 @@
 .search-input {
     .term {
+        input::::-ms-clear {
+            display: none;
+        }
         position: relative;
-        display: flex;
-        flex-direction: column;
+        @include flexbox((
+            display: flex,
+            flex-direction: column
+        ));
         .autocompletion {
             position: absolute;
             left: 0;
             right: 0;
             top: 34px;
             z-index: 10;
-            display: flex;
-            flex-direction: column;
+            @include flexbox((
+                display: flex,
+                flex-direction: column
+            ));
             border: 1px solid #ccc;
             background-color: #fff;
         }
