--- a/lib/sass/_SearchMenu.scss
+++ b/lib/sass/_SearchMenu.scss
@@ -1,5 +1,7 @@
 .search-menu {
-    display: flex;
-    justify-content: space-between;
-    justify-content: flex-end;
+    @include flexbox((
+        display: flex,
+        justify-content: flex-end
+    ));
+    // justify-content: space-between;
 }
