--- a/lib/sass/_Search.scss
+++ b/lib/sass/_Search.scss
@@ -11,6 +11,7 @@
         @include display-flex;
         @include justify-content(space-between);
         .query-list {
+            @include flex(12);
             @include flexbox((
                 display: flex,
                 flex-direction: column
