--- a/lib/sass/style.scss
+++ b/lib/sass/style.scss
@@ -23,3 +23,4 @@
 @import "./_A2zSearch.scss";
 @import "./_PublicationDateLimiter.scss";
 @import "./_FacetList.scss";
+@import "./_Database.scss";
