--- a/lib/sass/_SearchInput.scss
+++ b/lib/sass/_SearchInput.scss
@@ -16,7 +16,11 @@
                 flex-direction: column
             ));
             .suggestion {
+                width: 100%;
                 @include display-flex;
+                .suggested-term {
+                    @include display-flex;
+                }
             }
             position: absolute;
             left: 0;
