--- a/lib/sass/_Database.scss
+++ b/lib/sass/_Database.scss
@@ -22,8 +22,8 @@
 
     line-break: auto;
     &.in {
-        filter: alpha(opacity=90);
-        opacity: .9;
+        filter: alpha(opacity=100);
+        opacity: 1;
     }
     &.bottom {
         padding: 5px 0;
@@ -33,15 +33,15 @@
             left: 50%;
             margin-left: -5px;
             border-width: 0 5px 5px;
-            border-bottom-color: #ffffca;
+            border-bottom-color: rgb(82, 108, 135);
         }
     }
     .database-tooltip-inner {
         max-width: 600px;
         padding: 3px 8px;
-        color: #000;
+        color: #fff;
         text-align: center;
-        background-color: #ffffca;
+        background-color: rgb(82, 108, 135);
         border-radius: 4px;
     }
     .database-tooltip-arrow {
