--- a/lib/sass/_Database.scss
+++ b/lib/sass/_Database.scss
@@ -1,55 +1,27 @@
-.database-tooltip {
-    position: absolute;
-    z-index: 1070;
-    display: block;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: normal;
-    line-height: 1.42857143;
-    text-align: left;
-    text-align: start;
-    text-decoration: none;
-    text-shadow: none;
-    text-transform: none;
-    letter-spacing: normal;
-    word-break: normal;
-    word-spacing: normal;
-    word-wrap: normal;
-    white-space: normal;
-    filter: alpha(opacity=0);
-    opacity: 0;
-
-    line-break: auto;
-    &.in {
-        filter: alpha(opacity=100);
-        opacity: 1;
-    }
+.tooltip {
     &.bottom {
-        padding: 5px 0;
-        margin-top: 3px;
-        .database-tooltip-arrow {
-            top: 0;
-            left: 50%;
-            margin-left: -5px;
-            border-width: 0 5px 5px;
+        .tooltip-arrow {
             border-bottom-color: rgb(82, 108, 135);
         }
     }
-    .database-tooltip-inner {
-        max-width: 600px;
-        padding: 3px 8px;
-        color: #fff;
-        text-align: center;
-        background-color: rgb(82, 108, 135);
-        border-radius: 4px;
+    &.top {
+        .tooltip-arrow {
+            border-top-color: rgb(82, 108, 135);
+        }
     }
-    .database-tooltip-arrow {
-        position: absolute;
-        width: 0;
-        height: 0;
-        border-color: transparent;
-        border-style: solid;
+    &.left {
+        .tooltip-arrow {
+            border-left-color: rgb(82, 108, 135);
+        }
+    }
+    &.right {
+        .tooltip-arrow {
+            border-right-color: rgb(82, 108, 135);
+        }
+    }
+    .tooltip-inner {
+        max-width: 600px;
+        background-color: rgb(82, 108, 135);
     }
 }
 .database {
