--- a/lib/sass/_Database.scss
+++ b/lib/sass/_Database.scss
@@ -74,6 +74,7 @@
         .title {
             float:right;
             font-size: 12px;
+            font-weight: normal;
             vertical-align: middle;
             line-height: 40px;
         }
