close inist connection and add logo

--- a/lib/sass/_Authentication.scss
+++ b/lib/sass/_Authentication.scss
@@ -5,6 +5,9 @@
             height: 34px;
             border-radius: 0px;
         }
+        .inist-button {
+            padding: 5px;
+        }
 
         .collaspe {
             display: none;
