refactor FullTextHolding to display new coverage format, and bolden current holding

--- a/lib/sass/_Record.scss
+++ b/lib/sass/_Record.scss
@@ -31,6 +31,11 @@
     }
     .fulltext-holdings {
         list-style-type: none;
+        .fulltext-holding {
+            &.current {
+                font-weight: bold;
+            }
+        }
     }
 
     .notice {
