--- a/lib/sass/_NavBar.scss
+++ b/lib/sass/_NavBar.scss
@@ -2,10 +2,22 @@
     background-color: white;
     border: none;
     .nav {
+        border-bottom: solid #337ab7 1px;
         float: none;
         .nav-item {
+            a {
+                border: solid #337ab7 1px;
+                border-bottom: none;
+                &:hover {
+                    border: solid #337ab7 2px;
+                    border-bottom: none;
+                }
+            }
             &.active a {
+                border: solid #337ab7 3px;
+                border-bottom: none;
                 background-color: white;
+                font-weight: bold;
             }
         }
         .connection {
