--- a/lib/sass/_NavBar.scss
+++ b/lib/sass/_NavBar.scss
@@ -8,6 +8,7 @@
             a {
                 border: solid #337ab7 1px;
                 border-bottom: none;
+                margin-bottom: 0;
                 &:hover {
                     border: solid #337ab7 2px;
                     border-bottom: none;
