uppercase and bold connect buttons

--- a/lib/sass/_Header.scss
+++ b/lib/sass/_Header.scss
@@ -21,5 +21,11 @@
     }
     .connect {
         align-self: center;
+        .btn {
+            .text{
+                text-transform: uppercase;
+                font-weight: bold;
+            }
+        }
     }
 }
