add display inline-block for letter not to be split

--- a/lib/sass/_Database.scss
+++ b/lib/sass/_Database.scss
@@ -50,6 +50,7 @@
         -webkit-column-break-inside: avoid;
         page-break-inside: avoid;
         break-inside: avoid-column;
+        display: inline-block;
         h2 {
             margin-top: 0px;
             padding-left: 20px;
