--- a/lib/sass/_Header.scss
+++ b/lib/sass/_Header.scss
@@ -1,30 +1,20 @@
-.header {
+
+.bsbb {
     box-sizing: border-box;
+}
+.infos {
+    padding: 5px 0px 5px 0px;
     font-style: italic;
     font-size: 14px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
-    .infos {
-        display: flex;
-        flex-direction: column;
-        width: 300px;
-        .name, .otherdomains {
-            .text {
-                color: #333;
-            }
-            .profile-icon {
-                margin-right: 20px;
-            }
+    .name, .otherdomains {
+        .text {
+            color: #333;
         }
-    }
-}
-
-.connection {
-    .btn {
-        .text{
-            text-transform: uppercase;
-            font-weight: bold;
+        .profile-icon {
+            margin-right: 20px;
         }
     }
 }
