display connection button inline if no #ebsco_widget_connection of if fullscreen

--- a/lib/sass/_Header.scss
+++ b/lib/sass/_Header.scss
@@ -21,10 +21,12 @@
 }
 
 .connection {
+    display: inline;
     .btn {
         .text{
             text-transform: uppercase;
             font-weight: bold;
+            color: #337ab7;
         }
     }
 }
