add remove button in FavouriteResourceItem

--- a/lib/sass/_FavouriteResources.scss
+++ b/lib/sass/_FavouriteResources.scss
@@ -1,5 +1,6 @@
 .favourite-resource-list {
     .favourite-resource-item {
+        display: flex;
         a {
             display: block;
             width: 100%;
