--- a/lib/sass/_FavouriteResources.scss
+++ b/lib/sass/_FavouriteResources.scss
@@ -1,9 +1,14 @@
 .favourite-resource-list {
     .favourite-resource-item {
         display: flex;
+        align-items: center;
+        padding-left: 0;
         a {
             display: block;
             width: 100%;
+        }
+        .drag-button {
+            padding: 0 15px;
         }
     }
 }
