less space between publication link

--- a/lib/sass/_Record.scss
+++ b/lib/sass/_Record.scss
@@ -39,6 +39,7 @@
             &.current {
                 font-weight: bold;
             }
+            height: 2rem;
             .bookmark-button {
                 margin-left: auto;
                 &.added {
