add text for inist user

--- a/lib/sass/_Eds.scss
+++ b/lib/sass/_Eds.scss
@@ -3,3 +3,11 @@
         float: right;
     }
 }
+
+.inist-message {
+    border-radius: 25px;
+    background-color: #00264C;
+    color: white;
+    padding: 8px;
+    text-align: center; 
+}
