--- a/lib/sass/_Search.scss
+++ b/lib/sass/_Search.scss
@@ -1,4 +1,5 @@
 @import "./_variables.scss";
+
 .a2z-search {
     .letters .btn {
         padding: 0px 5px;
@@ -6,9 +7,12 @@
 }
 .search-bar {
     @include display-flex;
+    background-color: $header-blue-color;
+    padding: 0 50px;
     .search {
         @include flex(5);
         @include display-flex;
+        @include align-items(center);
         @include justify-content(space-between);
         .query-list {
             @include flex(12);
@@ -38,6 +42,12 @@
                 @include display-flex;
                 @include justify-content(flex-end);
             }
+        }
+
+        .search-button {
+            background-color: transparent;
+            border: 2px solid #fff;
+            color:#fff;
         }
     }
 }
