--- a/lib/sass/_SearchInput.scss
+++ b/lib/sass/_SearchInput.scss
@@ -25,7 +25,7 @@ $radius: 20px;
             }
         }
 
-        .search-query {
+        .term {
             position: relative;
             height:100%;
 
