--- a/lib/sass/_Search.scss
+++ b/lib/sass/_Search.scss
@@ -51,6 +51,7 @@
             @include flex-direction(column);
 
             margin-left: 50px;
+
             button {
                 color: #fff !important;
             }
@@ -61,6 +62,7 @@
                 color:#fff;
                 font-size: 16px;
                 height: 50px;
+                width: 100%;
             }
         }
     }
