--- a/lib/sass/_Eds.scss
+++ b/lib/sass/_Eds.scss
@@ -8,6 +8,12 @@
     border-radius: 25px;
     background-color: #00264C;
     color: white;
-    padding: 8px;
-    text-align: center; 
+    padding: 12px;
+    margin-top: 10px;
+    p {
+        width: 90%;
+        text-align: center;
+        font-size: 15px;
+        margin: auto;
+    }
 }
