--- a/lib/sass/_Header.scss
+++ b/lib/sass/_Header.scss
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-right: 15px;
     .infos {
         display: flex;
         flex-direction: column;
@@ -25,7 +26,6 @@
     display: inline;
     .btn {
         .text{
-            text-transform: uppercase;
             font-weight: bold;
             color: #337ab7;
         }
