--- a/lib/sass/_variables.scss
+++ b/lib/sass/_variables.scss
@@ -1,7 +1,9 @@
+$primary-blue: #0050A0;
 
-$title: #005AAB;
+$title: $primary-blue;
 $back: #f8f8f8;
 $darkerBack: #e8e8e8;
 $deactivated: grey;
 $hover: #3dbcf6;
-$header-blue-color: #0050A0;
+$body-padding-x: 50px;
+$body-padding-y: 20px;
