--- a/lib/sass/_SearchInput.scss
+++ b/lib/sass/_SearchInput.scss
@@ -3,6 +3,8 @@ $radius: 20px;
 .search-input {
     @include flex(1);
     height: 50px;
+    min-width: 900px;
+
     .input-group {
         height:100%;
 
