--- a/lib/sass/_Sidebar.scss
+++ b/lib/sass/_Sidebar.scss
@@ -1,7 +1,8 @@
 @import "./_variables.scss";
 
 .sidebar {
-    width: 250px;
+    @include flex(1);
+
     .limiters, .facet_list {
         h4 {
             font-size: 1.3em;
