--- a/lib/sass/_Header.scss
+++ b/lib/sass/_Header.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-right: 15px;
+    margin-right: 30px;
     .infos {
         display: flex;
         flex-direction: column;
@@ -19,12 +19,7 @@
             }
         }
     }
-}
-
-.connection {
-    display: inline;
-    margin-right: 15px;
-    .profile-button {
+    .login-button, .profile-button {
         cursor: auto;
         border-radius: 15px;
         border: 1px transparent;
@@ -37,6 +32,11 @@
             background-color: white !important;
         }
     }
+}
+
+.connection {
+    display: inline;
+    margin-right: 15px;
     .logout {
         color: white;
     }
