fix bug with profile button and header size

--- a/lib/sass/_Header.scss
+++ b/lib/sass/_Header.scss
@@ -24,6 +24,9 @@
         border-radius: 15px;
         border: 1px transparent;
         background-color: white;
+        font-weight: bold;
+        color: #034FA0;
+        white-space: normal;
         .text{
             font-weight: bold;
             color: #034FA0;
