--- a/lib/sass/_SearchMenu.scss
+++ b/lib/sass/_SearchMenu.scss
@@ -6,4 +6,9 @@
     .history {
         margin-right: 20px;
     }
+
+    .batch-export {
+        background-color: transparent!important;
+        border-color: transparent!important;
+    }
 }
