update navbar dot color

--- a/lib/sass/_NavBar.scss
+++ b/lib/sass/_NavBar.scss
@@ -43,7 +43,7 @@ $color-active: #00284b;
                 @include align-items(center);
 
                 .dot {
-                    color: red;
+                    color: #FF9982;
                     font-size: 9px;
                     position: absolute;
                     top: 6px;
