--- a/lib/sass/_App.scss
+++ b/lib/sass/_App.scss
@@ -1,12 +1,15 @@
 @import "./_variables.scss";
 
+
+$color-active: #00284b;
+
 .btn-primary {
     background-color: $primary-blue;
     border-color: $primary-blue;
 
     &:hover {
-        background-color: #0050a0cf;
-        border-color: #0050a0cf;
+        background-color: $color-active;
+        border-color: $color-active;
     }
 }
 
