Proxify open access links

--- a/lib/sass/_A2zSearch.scss
+++ b/lib/sass/_A2zSearch.scss
@@ -18,5 +18,9 @@
         &:hover {
             color: #fff;
         }
+
+        &.btn-primary {
+            background-color: $primary-blue-alt;
+        }
     }
 }
