--- a/lib/sass/_Record.scss
+++ b/lib/sass/_Record.scss
@@ -9,6 +9,10 @@
     padding: 5px 20px 5px 20px;
     text-align: left;
 
+    .record-checkbox {
+        margin-right: 10px;
+    }
+
     p {
         margin: 0 0 5px;
     }
